seed and sessions controller
