# packages/server/main.swagger.json
@@ -202,6 +202,54 @@
         }
       }
     },
+    "/api/session/register": {
+      "post": {
+        "summary": "Register a new user",
+        "tags": ["Session", "no-nlapi"],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UserRegister"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "User registered successfully"
+          },
+          "400": {
+            "description": "User already exists"
+          }
+        }
+      }
+    },
+    "/api/session/login": {
+      "post": {
+        "summary": "Login a user",
+        "tags": ["Session", "no-nlapi"],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UserLogin"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Login successful"
+          },
+          "400": {
+            "description": "Invalid credentials"
+          }
+        }
+      }
+    },
     "/users": {
       "get": {
         "summary": "Retrieve a list of users",
@@ -364,5 +412,14 @@
       }
     }
   },
-  "tags": []
+  "tags": [
+    {
+      "name": "no-nlapi",
+      "description": "Ignored by the NLAPI"
+    },
+    {
+      "name": "Session",
+      "description": "Session management"
+    }
+  ]
 }
